# DislScatCubFITMisfitThreading

./: CMakeLists.txt  README.md  default.cfg
CMakeModules/: FindGSL.cmake
config/: data.cfg  fit.cfg  sample.cfg
src/: ANACalculatorCoplanarTriple.cpp  ANACalculatorCoplanarTriple.h  ANAMisfitInterfaceCub.cpp  ANAMisfitInterfaceCub.h  ANASampleCub.cpp  ANASampleCub.h  ANASampleHex.cpp  ANASampleHex.h  ANAThreadingLayerCub.cpp  ANAThreadingLayerCub.h  DataReader.cpp  DataReader.h  Engine.cpp  Engine.h  FitANACalculatorCoplanarTriple.cpp  FitANACalculatorCoplanarTriple.h  MisfitInterfaceHex.cpp  MisfitInterfaceHex.h  NonlinearFit.cpp  NonlinearFit.h  PortFitter.cpp  PortFitter.h  ProgramSettings.cpp  ProgramSettings.h  StringTools.cpp  StringTools.h  ThreadingLayerHex.cpp  ThreadingLayerHex.h  main.cpp
